--- a/project/plans/templates/plans/includes/copy_plans_form.html
+++ b/project/plans/templates/plans/includes/copy_plans_form.html
@@ -15,7 +15,7 @@
         {% for field in form %}
         <div class="row gx-1 align-items-center my-2">
             <div class="col-4">{{ field.label_tag }}</div>
-            <div class="col-8 align-items-center">{{ field|as_crispy_field }}</div>
+            <div class="col-8">{{ field|as_crispy_field }}</div>
         </div>
         {% endfor %}
 
